Made Symbol public tests work